--- a/app/src/main/assets/epub_page_skeleton.html
+++ b/app/src/main/assets/epub_page_skeleton.html
@@ -4,7 +4,9 @@
         <!-- Zip Support -->
         <script src="file:///android_asset/epub.js" type="text/javascript"></script>
         <!-- EPUBJS Renderer -->
-        <script src="file:///android_asset/zip.min.js" type="text/javascript"></script>        
+        <script src="file:///android_asset/zip.min.js" type="text/javascript"></script>
+        <!-- This library is used for EPUB local storage -->
+        <script src="file:///android_asset/localforage.min.js" type="text/javascript"></script>
 
         <style type="text/css">
             #main {
@@ -20,17 +22,19 @@
                 margin: 5% 5%;
             }
         </style>
-        
-        <script type="text/javascript">
-           EPUBJS.Render.Iframe.prototype.setLeft = function(leftPos){
-               this.document.documentElement.style.WebkitTransform = "translate(-" + leftPos + "px, 0)";
-            };
 
+        <script>
+            // EPUBJS.filePath = "../build/libs/zip/";
+            EPUBJS.cssPath = "../reader/css/";
+        </script>
+
+
+        <script type="text/javascript">
             function getSelectedText(){
                 var txt = Book.renderer.render.window.getSelection();
-
                 Android.setSelectedText(""+txt);
             }
+
         </script>
         
     </head>
