--- a/app/src/main/assets/translation_page_skeleton_1.html
+++ b/app/src/main/assets/translation_page_skeleton_1.html
@@ -1,6 +1,218 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            td.nums1{font-weight:bold;color:#5e58c7;vertical-align:top;text-align:right}
+            td.roman1{font-weight:bold;color:#5e58c7;vertical-align:top;font-size:16px}
+            span.roman1{font-weight:bold;color:#5e58c7;vertical-align:bottom}
+            span.b{font-weight:bold}
+            span.ic,span.i,.bl{font-style:italic;color:#039}
+            span.r{color:red}
+            span.supr1{vertical-align:super;color:#039}
+            span.ac{font-variant:small-caps;color:red;font-weight:bold}
+            div.trans	{padding:0}
+            ol.entry li	{margin-top:5px;}
+            .hide 	{display:none}
+            .clickable{cursor:pointer}
+            .small1{font-size:x-small}
+            #myAutoComplete{width:150px;padding:2px 2px 2px 2px;display:inline;text-align:left}
+            #myACContainer{display:none}
+            .yui-skin-sam .yui-ac{position:relative;font-family:arial;font-size:100%}
+            .yui-skin-sam .yui-ac-input{position:relative;width:150px}
+            .yui-skin-sam .yui-ac-container{position:absolute;top:27px;left:-3px;width:100%;text-align:left}
+            .yui-skin-sam .yui-ac-content{position:absolute;width:97%;border:1px solid #808080;background:#fff;overflow:hidden;z-index:9050;max-height:300px;overflow:auto;overflow-x:hidden;_height:300px;padding-left:0;padding-right:0;box-shadow:2px 2px 5px #b7b7b7;-webkit-border-radius:3px 3px 3px 3px;-moz-border-radius:3px 3px 3px 3px;border-radius:3px 3px 3px 3px}
+            .yui-skin-sam .yui-ac-bd{padding-left:0;padding-right:0}
+            .yui-skin-sam .yui-ac-shadow{position:absolute;margin:.3em;width:100%;background:#000;-moz-opacity:.10;opacity:.10;filter:alpha(opacity=10);z-index:904900}
+            .yui-skin-sam .yui-ac iframe{opacity:0;filter:alpha(opacity=0);padding-right:.3em;padding-bottom:.3em}
+            .yui-skin-sam .yui-ac-content ul{margin:0;padding:0;width:100%}
+            .yui-skin-sam .yui-ac-content li{margin:0;padding:2px 5px;cursor:pointer;white-space:nowrap;list-style:none;zoom:1}
+            .yui-skin-sam .yui-ac-content li.yui-ac-prehighlight{background:#b3d4ff}
+            .yui-skin-sam .yui-ac-content li.yui-ac-highlight{background:#5e58c7;color:#FFF}
+            li.yui-ac-highlight a{color:white}
+            .yui-ac-content li{border-top:solid 1px #dcdcdc}
+            .yui-ac-content li:first-child{border-top:0}
+            .myCustomResult{cursor:pointer}
+            .lang{background-color:#b7b7b7;color:white;font-weight:bold;padding:1px}
+            .dark{background-color:#878787}
+            .ACconj{float:right}
+            .forum{text-overflow:ellipsis;overflow:hidden}
+            html{font-size:100%;overflow:auto;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
+            body{margin:0;font-size:12px;line-height:1.231;font-family:Arial,"Helvetica Neue",sans-serif;background:white}
+            body,button,input,select,textarea{font-family:sans-serif;color:#222}
+            audio:not([controls]){display:none}
+            a{text-decoration:none;color:#0645ad}
+            a:hover{text-decoration:underline}
+            a:visited{color:#819}
+            a img{border:0}
+            .mobileblock{display:inline}
+            .alwaysblock{display:block}
+            .alwaysblock:active,.alwaysblock:focus,.alwaysblock:hover{color:#dcdcdc}
+            #container{width:1002px;margin:0 auto;overflow:hidden;box-shadow:0 0 5px 1px #5e58c7;margin-bottom:3px;border-radius:3px;min-width:300px}
+            #header{background:#5e58c7;position:static;margin:0 auto;height:41px;line-height:38px;border-bottom-left-radius:3px;border-bottom-right-radius:3px;-webkit-border-bottom-left-radius:3px;-webkit-border-bottom-right-radius:3px;-moz-border-radius-bottomleft:3px;-moz-border-radius-bottomright:3px}
+            #logo{color:#f8f7ff;float:left;font-family:Arial,Helvetica-Bold;font-size:16px;padding-left:16px;white-space:nowrap}
+            #logo a{color:#f8f7ff;font-family:Arial,Helvetica-Bold;font-size:22px}
+            #nav{color:#f7f6ff;float:right;font-family:Arial,"Helvetica Neue";font-size:13px;padding-right:13px;padding-top:2px}
+            #nav a{font-weight:bold;color:#f7f6ff;font-size:13px;font-family:Arial,"Helvetica Neue"}
+            #logo h1{color:#e5e3ff;font-family:Arial,Helvetica;font-size:12px;display:inline}
+            #ad1{position:static;width:728px;height:90px;margin:6px auto}
+            #top728{border:0 none;height:90px;overflow:hidden;width:100%}
+            #ad2{position:static;width:728px;height:90px;margin:6px auto}
+            #bottom728{border:0 none;height:90px;overflow:hidden;width:100%}
+            #search{height:50px;background:#ebebf2;position:static;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;border:1px #dcdcdc solid}
+            #search input{background:#fff;border:1px solid #d3d3d3;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;height:30px;width:280px;font-size:20px;padding-right:2px}
+            input:-moz-placeholder{color:#b3b3b3}
+            *[placeholder]{padding-left:5px!important}
+            #search input:active,#search input:focus{color:black}
+            #text_form{float:left;margin-left:184px;margin-top:6px}
+            #text_form input.button{border:0;width:12px;height:12px;background-color:#d7d7d7;cursor:pointer;background-position:5px;line-height:31px;vertical-align:bottom;background-image:none;position:relative;bottom:1px;padding:8px 7px 8px 7px}
+            .inputcontainer{border:solid 1px #b7b7b7;background-color:#d7d7d7;cursor:pointer;background-position:5px;line-height:31px;vertical-align:bottom;background-image:none;padding-right:2px;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;width:25px;display:inline-block;zoom:1;*display:inline}
+            label.custom-select{position:relative;display:inline-block}
+            .custom-select select{position:relative;border:1px solid #b7b7b7;padding:7px 8px 6px 10px;margin:0;font:inherit;font-size:13px;font-weight:bold;width:164px;outline:0;line-height:1.2;background-color:#d7d7d7;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}
+            .custom-select select:focus{-webkit-box-shadow:0 0 3px 1px #ccc;-moz-box-shadow:0 0p 3px 1px #ccc;box-shadow:0 0 3px 1px #ccc}
+            #forumapi{background-repeat:no-repeat;float:right;margin-top:15px;margin-right:9px;white-space:nowrap;font-size:12px}
+            #forumapi span.bttn a{font-size:14px;font-weight:bold;color:gray;margin-right:-4px;padding:7px;border:1px solid #c9c9c9;background:#f6f6f9}
+            #forumapi span.forum a{-webkit-border-top-left-radius:5px;-webkit-border-bottom-left-radius:5px;-moz-border-radius-topleft:5px;-moz-border-radius-bottomleft:5px;border-top-left-radius:5px;border-bottom-left-radius:5px}
+            #forumapi span.api a{-webkit-border-top-right-radius:5px;-webkit-border-bottom-right-radius:5px;-moz-border-radius-topright:5px;-moz-border-radius-bottomright:5px;border-top-right-radius:5px;border-bottom-right-radius:5px}
+            .content{margin-top:-5px;background-color:#f6f6f9;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;border:1px #dcdcdc solid;overflow:hidden;clear:both}
+            #contenttable{border-collapse:collapse}
+            #leftcolumn{width:164px;line-height:1.4;border-right:1px solid #dcdcdc}
+            #leftcolumn ul{list-style-type:none}
+            li.synonym{margin-left:auto}
+            #left{padding-left:0;margin-top:0;font-size:11px}
+            #left ul li{padding-right:1px}
+            #left ul{padding-left:15px;padding-right:1px}
+            #rstitle{margin-top:15px}
+            #rsinfo{padding-left:25px}
+            #rstitle,#rsinfo{display:none}
+            #wrsave{list-style-type:none}
+            #more{padding-left:17px}
+            #more p{margin-bottom:0}
+            .randomword{padding-left:15px}
+            td .title1{font-size:13px;font-weight:bold;border-bottom:1px solid #dcdcdc;margin-bottom:7px;padding-top:25px;padding-bottom:6px;padding-left:16px;color:#777}
+            #centercolumn{width:524px;padding:0}
+            #listen_widget,.conjugate_link{color:#707070;background-color:#f9f9f9;font-size:12px;display:inline-block;white-space:nowrap;padding:4px 5px 2px;border:1px solid #c5c5c5;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;margin-left:0}
+            #listen_txt{cursor:pointer}
+            #listen_txt,.listen_language{padding:5px 7px 4px 5px;position:relative;top:-2px;left:4px;text-transform:uppercase;border-left:1px solid #c5c5c5;border-right:1px solid #c5c5c5;margin-right: 1em;}
+            .conjugate_link{height:10px;font-variant:small-caps;vertical-align:bottom;padding:0 2px 2px 2px;line-height:.7;top:-1px;text-transform:none}
+            a .listen_language,a.conjugate_link:visited{color:#707070}
+            #listen_widget a:hover,.conjugate_link:hover{text-decoration:none;font-weight:bold!important}
+            #dummyspan{display:none}
+            #article,#articleHead,#postArticle{padding:0 20px}
+            #article a,#articleWRD a,#articleHead a{font-size:13px}
+            #article p,#articleWRD p,#articleHead p{font-size:13px;margin-bottom:3px}
+            div#article .noword p{font-size:14px}
+            div#article p#noEntryFound{font-size:12px}
+            div#article p#gSuggestionHead{margin-bottom:0;font-size:12px}
+            div#article p.tobetranslated{font-size:12px}
+            div#spellSug{margin-left:2px!important}
+            #spellSug table{border-style:hidden;border-collapse:collapse}
+            #spellSug td{border-width:0}
+            h3.headerWord{display:inline-block;font-family:"Times New Roman";font-size:25px;margin:20px 18px 20px 0}
+            #footerlink{display:none}
+            #article p.EngInf{font-size:12px;padding-bottom:0;margin-bottom:5px}
+            .inflections{margin-left:10px}
+            .notfound{padding:2px;border-top:solid #c8c8c8 1px;border-bottom:solid #c8c8c8 1px;background-color:#f8f8f8;margin-top:5px}
+            .forma{font-weight:bold;color:black}
+            .mfsp{color:#039;font-style:italic}
+            .etichetta,.attrverpron{font-variant:small-caps;text-transform:lowercase}
+            .boxc{display:block;border:1px solid black;padding:5px;background:white}
+            .bt{display:block}
+            div.conv{margin-left:20px}
+            div.notConv{margin-left:0;padding-left:0;border-left:0}
+            .enmon ul{list-style-type:none;margin-top:0}
+            ul.subEnt,.subEnt ul,.subEntry ul{margin-top:0;margin-bottom:0;padding-bottom:0}
+            span.romansp{font-style:normal;font-weight:normal}
+            ul.sense1{margin-left:-30px}
+            span.xrhom{vertical-align:super;color:#039}
+            span.senseGP{display:block}
+            .senseGP ul li{margin-top:4px;margin-bottom:-4px}
+            p.subSN{margin-left:40px;margin-top:0;margin-bottom:0;font-size:12px}
+            span.supr2{color:#039}
+            span.psg{display:block}
+            .subEntry span{display:inline}
+            ul.hEntry{margin-left:-20px}
+            .espb ul,.espl ul{list-style-type:none}
+            .thumbs{display:none}
+            .engthes ul{list-style-type:none;padding-top:0;margin-top:0}
+            .liSense{margin-left:-40px}
+            span.syno:hover{text-decoration:underline}
+            div.tags{display:inline;width:50%;float:right;font-style:italic}
+            .clickable ul li.liSense ul li.synonym{display:inline-block;font-size:14px}
+            .clickable ul li.synonym{display:inline-block;font-size:14px}
+            .tags{color:gray}
+            .clickable ul li.synonym:after{content:',\00a0'}
+            .clickable ul li.last:after{content:''}
+            .reseta{font-weight:bold}
+            .inps{font-size:12px;border:solid 1px gray;background-color:#f0f0f0;padding-bottom:5px;padding-left:10px;width:80%}
+            .inps label{font-weight:bold}
+            .inps input{width:300px}
+            .addterm{margin-top:5px}
+            .FTsource{padding-left:30px}
+            .FTlist{padding-left:60px}
+            #FTintro{padding-top:5px;padding-bottom:5px}
+            .wrcopyright{font-family:Verdana;margin-left:20px}
+            table.WRD{width:100%;border-collapse:collapse;border-top:solid 1px #dcdcdc;border-bottom:solid 1px #dcdcdc;cursor:pointer}
+            tr.wrtopsection td{padding-bottom:7px;padding-top:7px;font-size:13px;text-align:center}
+            #articleWRD p.note-othersideonly{margin-left:20px;font-size:12px}
+            tr.more td{border-bottom:1px solid #dcdcdc}
+            .POS2{color:#0645ad}
+            .WRD td{padding:2px}
+            .WRD td.FrWrd{padding-left:20px}
+            .WRD td.ToWrd{color:black;padding-right:20px}
+            td.ToEx,td.FrEx{color:gray}
+            .To2{font-style:italic}
+            .dsense {float: right !important;font-style: normal;}
+            .ltr{direction:ltr}
+            .notePubl{padding-left:20px!important;padding-right:20px!important}
+            table.WRD .additional{border-top:solid 1px #dcdcdc}
+            table.WRDrefl{border-bottom:0;margin-bottom:15px}
+            .WRreporterror{width:100%;border-collapse:collapse;border-bottom:1px solid #DCDCDC;margin-bottom:40px}
+            .WRreporterror td{padding-left:2px;padding-right:4px}
+            .even{background-color:#ebebf2;vertical-align:top}
+            .odd{vertical-align:top}
+            :not(.even)+.even,:not(.odd)+.odd{border-top:1px solid #dcdcdc}
+            .gold{background-color:gold;vertical-align:top}
+            p#threadsHeader{font-size:13px!important;font-weight:bold;margin-bottom:0;padding:7px 0;text-align:center;border-top:1px solid #dcdcdc}
+            #lista_link{font-size:13px;margin-bottom:5px;padding-left:60px;border-top:1px solid #dcdcdc;padding-top:13px}
+            #lista_link ul li{list-style-type:none;direction:ltr}
+            #lista_link ul{padding-left:0;margin-bottom:5px}
+            #lista_link a{font-size:13px}
+            .threadnote{margin-left:43px;margin-top:15px;font-weight:bold}
+            .threadnote ol{font-weight:normal;padding-top:2px;padding-bottom:2px}
+            .threadalt li{padding:2px 0}
+            #extra_links{margin-bottom:15px;margin-left:43px}
+            #extra_links a{display:list-item;padding:2px 0}
+            #extra_links .boxed.last{border:none!important}
+            #extra_links a:last-child .boxed{border-bottom:0 none}
+            p.other_languages{line-height:1.5em;font-size:12px!important}
+            .FCboxes{margin-top:5px;margin-left:-5px;padding-top:7px;padding-left:10px;border-top:solid 1px #dcdcdc}
+            .rightcolumn,#rightcolumn{width:304px}
+            #rightcolumn{border-left:1px solid #dcdcdc}
+            #rightcolumn,#leftcolumn,#centercolumn{vertical-align:top}
+            table.rightcolumn{table-layout:fixed}
+            table #right{padding-left:18px;margin-top:0}
+            td.ad{padding-bottom:10px}
+            td.ad a {display: inherit;}
+            a.conjugate {margin-left: 0.3em;}
+            div.plusone{margin-top:3px;margin-left:5px;vertical-align:middle;display:table-cell}
+            #fb-root iframe{height:70px!important}
+            .us300c{text-align:center}
+            #footer{font-size:11px;position:relative;padding-top:7px;padding-bottom:5px}
+            .footer{width:1000px}
+            #WHlinksmoved{display:none}
+            input::-webkit-input-placeholder:focus,input::-webkit-input-placeholder:active{color:#fff!important}
+            input:-moz-placeholder:focus{color:#fff!important}
+            input:-ms-input-placeholder:focus{color:#fff!important}
+            #accentSelection {
+            border: 0;
+            width:5em;
+            text-transform: uppercase;
+            color: #707070;
+            background: transparent;
+            padding: 2px 0px 0px 3px;
+            position: relative;
+            top: -1px;
+            }</style>
         <script>
             var populateMain = function(pcontent){
                 console.log(pcontent);
