--- a/app/src/main/assets/epub_page_skeleton.html
+++ b/app/src/main/assets/epub_page_skeleton.html
@@ -1,54 +1,151 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Zip Support -->
-        <script src="file:///android_asset/epub.js" type="text/javascript"></script>
-        <!-- EPUBJS Renderer -->
-        <script src="file:///android_asset/zip.min.js" type="text/javascript"></script>
-        <!-- This library is used for EPUB local storage -->
-        <script src="file:///android_asset/localforage.min.js" type="text/javascript"></script>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Basic ePubJS Example</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <style type="text/css">
-            #main {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
+    <!-- Zip Support -->
+    <script src="file:///android_asset/epub.js" type="text/javascript"></script>
+    <!-- EPUBJS Renderer -->
+    <script src="file:///android_asset/zip.min.js" type="text/javascript"></script>
+    <!-- jQuery -->
+    <script src="file:///android_asset/jquery-2.2.0.min.js" type="text/javascript"></script>
+
+    <style type="text/css">
+        body {
+            overflow: hidden;
+            margin: 0 !important;
+            padding: 0 !important;
+        }
+
+        #main {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        #area {
+            margin: auto auto;
+            width: 80%;
+            height: 80%;
+            max-width: 1250px;
+        }
+
+        .vertical-centered-container{
+            width: 100%;
+            height: 100%;
+            display: table;
+        }
+
+        .vertical-centered-cell{
+            width: 100%;
+            height: 100%;
+            display: table-cell;
+            vertical-align: middle;
+        }
+
+        #area iframe {
+            border: none;
+        }
+    </style>
+
+    <script>
+            var book;
+            var rendered;
+            var locations;
+            var fontSize,width,height;
+
+            function setFontSize(psize){
+                fontSize = psize;
+                book.setStyle("font-size",fontSize);
             }
 
-            #area {
-                width: 90%;
-                height: 90%;
-                margin: 5% 5%;
+            function setBookWidth(pwidth){
+                width = pwidth;
+                $("#area").css("width",pwidth+"px");
             }
-        </style>
 
-        <script>
-            // EPUBJS.filePath = "../build/libs/zip/";
-            EPUBJS.cssPath = "../reader/css/";
-        </script>
+            function setBookHeight(pheight){
+                height = pheight;
+                $("#area").css("height",pheight+"px");
+            }
 
+            function setLocations(storedlocations){
+              locations = storedlocations;
+            }
 
-        <script type="text/javascript">
             function getSelectedText(){
-                var txt = Book.renderer.render.window.getSelection();
+                var txt = book.renderer.render.window.getSelection();
                 Android.setSelectedText(""+txt);
             }
-
         </script>
-        
-    </head>
-    <body>
-        <div id="main">
+</head>
+<body>
+<div id="main">
+    <div class="vertical-centered-container">
+        <div class="vertical-centered-cell">
             <div id="area"></div>
-        </div> 
+        </div>
+    </div>
+</div>
 
-        <script>
-            var setBookWidthAndHeight = function(width,height){
-                Book.setStyle("width",width+"%");
-                Book.setStyle("height",height+"%");
-                Book.setStyle("margin",(100-width)/2+"%");
+<script>
+            function loadBook(pbookpath,pfontsize,location,pwidth,pheight){
+                book = ePub(pbookpath);//"Brandon Sanderson - [Stormlight Archive 01] - The Way of Kings [v5.0] [epub].epub");
+                fontSize = pfontsize;
+                book.setStyle("font-size",pfontsize);
+
+                if (location != 'null'){
+                    book.gotoCfi(location);
+                }
+
+                setBookWidth(pwidth);
+                setBookHeight(pheight);
+
+                rendered = book.renderTo("area");
+
+                book.ready.all.then(function(){
+                  // Load in stored locations from json or local storage
+                  if (locations) {
+                    console.log('javascript: Locations provided and loaded.');
+                    return book.locations.load(stored);
+                  } else {
+                    // Or generate the locations on the fly
+                    // Can pass an option number of chars to break sections by
+                    // default is 150 chars
+                    console.log('javascript: Locations NOT provided. They will be generated.');
+                    locations = book.locations.generate(1600);
+
+                    Android.saveBookLocations(locations);
+
+                    return locations;
+                  }
+                })
+                .then(function(locations){
+                    // Wait for book to be rendered to get current page
+                    rendered.then(function(){
+                        // Get the current CFI
+                        var currentLocation = book.getCurrentLocationCfi();
+                    });
+
+                    // Listen for location changed event, get percentage from CFI
+                    book.on('renderer:locationChanged', function(location){
+                        console.log('javascript: Location changed.');
+                        console.log('javascript: New location: '+location);
+                        var percent = book.locations.percentageFromCfi(location);
+                        var percentage = Math.floor(percent * 100);
+                        console.log('javascript: book state: location: '+location+' - fontSize: '+fontSize+' - width: '+width+' - height: '+height);
+                        Android.saveBookState(location,fontSize,width,height);
+                        console.log('javascript: Percentage: '+percentage);
+
+                        Android.setBookCompletion(percentage);
+                    });
+                });
             }
         </script>
-    </body>
+</body>
 </html>
