--- a/app/src/main/assets/epub_page_skeleton.html
+++ b/app/src/main/assets/epub_page_skeleton.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Basic ePubJS Example</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta content='user-scalable=no, initial-scale=1, width=device-width' id='viewport' name='viewport'>
 
     <!-- Zip Support -->
     <script src="file:///android_asset/epub.js" type="text/javascript"></script>
@@ -14,6 +13,11 @@
     <script src="file:///android_asset/zip.min.js" type="text/javascript"></script>
     <!-- jQuery -->
     <script src="file:///android_asset/jquery-2.2.0.min.js" type="text/javascript"></script>
+
+    <script>
+        var viewPortScale = 1 / window.devicePixelRatio;
+        $('#viewport').attr('content', 'user-scalable=no, initial-scale='+viewPortScale+', width=device-width');
+    </script>
 
     <style type="text/css">
         body {
@@ -57,7 +61,36 @@
             var book;
             var rendered;
             var locations;
+            var pagination;
             var fontSize,width,height;
+
+            function setNightMode(){
+                $("body").css("background-color","black");
+                book.setStyle("background-color","black");
+                book.setStyle("color","white");
+            }
+
+            function setNormalMode(){
+                $("body").css("background-color","white");
+                book.setStyle("background-color","white");
+                book.setStyle("color","black");
+            }
+
+            function setSepiaMode(){
+                $("body").css("background-color","#C6AF89");
+                book.setStyle("background-color","#C6AF89");
+                book.setStyle("color","black");
+            }
+
+            function setColorMode(pmode){
+                if (pmode == 0){
+                    setNormalMode();
+                }else if (pmode == 1){
+                    setSepiaMode();
+                }else if (pmode == 2){
+                    setNightMode();
+                }
+            }
 
             function setFontSize(psize){
                 fontSize = psize;
@@ -75,12 +108,23 @@
             }
 
             function setLocations(storedlocations){
+              console.log("locations:"+storedlocations);
               locations = storedlocations;
+            }
+
+            function setPagination(storedpagination){
+              console.log("pagination:"+storedpagination);
+              pagination = storedpagination;
             }
 
             function getSelectedText(){
                 var txt = book.renderer.render.window.getSelection();
                 Android.setSelectedText(""+txt);
+            }
+
+            function gotoPercentage(ppercentage){
+                var cfi = book.locations.cfiFromPercentage(ppercentage);
+                book.gotoCfi(cfi);
             }
         </script>
 </head>
@@ -94,10 +138,12 @@
 </div>
 
 <script>
-            function loadBook(pbookpath,pfontsize,location,pwidth,pheight){
+            function loadBook(pbookpath,pfontsize,location,pwidth,pheight,pmode){
                 book = ePub(pbookpath);//"Brandon Sanderson - [Stormlight Archive 01] - The Way of Kings [v5.0] [epub].epub");
                 fontSize = pfontsize;
                 book.setStyle("font-size",pfontsize);
+
+                setColorMode(pmode);
 
                 if (location != 'null'){
                     book.gotoCfi(location);
@@ -108,24 +154,39 @@
 
                 rendered = book.renderTo("area");
 
+                if (pagination && pagination != "undefined"){
+                    console.log("Loading previously created pageList.");
+                    book.loadPagination(pagination);
+                }else{
+                    book.pageListReady.then(function(pageList){
+                        console.log("Page list generated and saved.");
+                        pagination = pageList;
+                        Android.saveBookPagination(JSON.stringify(pageList));
+                    });
+                }
+
                 book.ready.all.then(function(){
                   // Load in stored locations from json or local storage
-                  if (locations) {
-                    console.log('javascript: Locations provided and loaded.');
-                    return book.locations.load(stored);
+                  if (pagination == undefined || pagination == "undefined"){
+                    console.log("Generating page list.");
+                    book.generatePagination();
+                  }
+
+                  if (locations && locations != "undefined") {
+                    console.log('javascript: Locations provided and loaded -> '+locations);
+                    return book.locations.load(locations);
                   } else {
                     // Or generate the locations on the fly
                     // Can pass an option number of chars to break sections by
                     // default is 150 chars
                     console.log('javascript: Locations NOT provided. They will be generated.');
-                    locations = book.locations.generate(1600);
 
-                    Android.saveBookLocations(locations);
-
-                    return locations;
+                    return book.locations.generate(1600);
                   }
                 })
                 .then(function(locations){
+                    Android.saveBookLocations(JSON.stringify(locations));
+
                     // Wait for book to be rendered to get current page
                     rendered.then(function(){
                         // Get the current CFI
@@ -141,6 +202,8 @@
                         console.log('javascript: book state: location: '+location+' - fontSize: '+fontSize+' - width: '+width+' - height: '+height);
                         Android.saveBookState(location,fontSize,width,height);
                         console.log('javascript: Percentage: '+percentage);
+
+                        Android.setUIPageData(book.pagination.pageFromCfi(location),book.pagination.lastPage);
 
                         Android.setBookCompletion(percentage);
                     });
